Separate out AMRMClient and NMClient from AppMaster to prepare for Hadoop-2.1 and secure Hadoop. Also fixed some wrong license statement.